@@ -1,5 +1,10 @@
 # $Id$
 
+2006-08-08	Konstantin V. Arkhipov
+
+	* core/DB/, meta/builders/: now php-5.2 compatible, backported from
+	trunk.
+
 2006-07-21	Konstantin V. Arkhipov
 
 	* 0.4.8 released.
